Teste com banco de dados SQLite; Alterado view para renderizar em modo debug; criado primeira tabela e inserção de dados iniciais

--- a/App/View/Home/nova.html
+++ b/App/View/Home/nova.html
@@ -1,1 +1,12 @@
-teste
+{% extends "base.html" %}
+
+{% block title %}Usuarios{% endblock %}
+
+{% block body %}
+
+    <h1>Usuarios</h1>
+<pre>
+    {{dump(usuarios)}}
+</pre>
+
+{% endblock %}
