Filtro de permissão de metodos http nas rotas; Ajuste de parametros GETs e teste de parametro em rota

--- a/App/View/Usuario/ver-usuario.html
+++ b/App/View/Usuario/ver-usuario.html
@@ -4,15 +4,13 @@
 
 {% block body %}
 
-    <h1>Usuarios</h1>
+    <h1>Usuario</h1>
     <ul>
-    {% for usuario in usuarios %}
         <li>{{usuario.getNomeCompleto()}}</li>
-    {% endfor %}
     </ul>
 <pre style="background-color: black; color: chartreuse; padding: 10px; border-radius: 10px;">
 metodo: {{metodo}}
-{{dump(usuarios)}}
+{{dump(usuario)}}
 </pre>
 
 {% endblock %}
