--- a/App/View/Home/index.html
+++ b/App/View/Home/index.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "admin.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}{{parent()}} - Home{% endblock %}
 
 {% block body %}
 
