--- a/App/View/Home/nova.html
+++ b/App/View/Home/nova.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "admin.html" %}
 
-{% block title %}Usuarios{% endblock %}
+{% block title %}{{parent()}} - Usuarios{% endblock %}
 
-{% block body %}
+{% block main %}
 
     <h1>Usuarios</h1>
     <ul>
