--- a/App/View/Painel/index.html
+++ b/App/View/Painel/index.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "admin.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}{{parent()}} Home{% endblock %}
 
-{% block body %}
+{% block main %}
 
 <section class="section">
     <div class="container">
