--- a/App/View/admin.html
+++ b/App/View/admin.html
@@ -40,7 +40,7 @@
                 </a>
         
                 <div class="navbar-dropdown">
-                <a class="navbar-item">
+                <a class="navbar-item" href="/usuarios">
                     Usuarios
                 </a>
                 <a class="navbar-item">
