--- a/App/View/admin.html
+++ b/App/View/admin.html
@@ -5,7 +5,7 @@
 {% block htmlcss %}class="has-navbar-fixed-top"{% endblock %}
 
 {% block stylesheets %}
-<link rel="stylesheet" href="assets/css/admin.css">
+<link rel="stylesheet" href="{{asset('assets/css/admin.css')}}">
 {% endblock %}
     
 {% block body %}
