--- a/App/View/base.html
+++ b/App/View/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="assets/bulma/css/bulma.min.css">
-    <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="{{asset('assets/bulma/css/bulma.min.css')}}">
+    <link rel="stylesheet" href="{{asset('assets/fontawesome/css/all.min.css')}}">
     {% block stylesheets %}
     {% endblock %}
 </head>
