--- a/App/View/form.html
+++ b/App/View/form.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-2">
     <header class="card-header">
         <p class="card-header-title">
         <span class="icon mr-1"><i class="fa-solid fa-rectangle-list"></i></span>
